# kgql

./: .gitignore  README.md  pyproject.toml
docs/: federated-query-protocol.md
src/kgql/: __init__.py  exceptions.py
src/kgql/api/: __init__.py  kgql.py
src/kgql/export/: __init__.py  graph.py  neo4j.py  property_graph.py  rdf.py  visualization.py
src/kgql/governance/: __init__.py  checker.py  compiler.py  evolution.py  patterns.py  resolver.py  schema.py  systems.py
src/kgql/indexer/: __init__.py  query_engine.py  query_operators.py  schema_indexer.py
src/kgql/mcp/: README.md  __init__.py  __main__.py  server.py
src/kgql/parser/: __init__.py  ast.py  grammar.py  parser.py
src/kgql/temporal/: __init__.py  resolver.py  verifier.py
src/kgql/translator/: __init__.py  planner.py
src/kgql/trust_path/: __init__.py  analyzer.py
src/kgql/wrappers/: __init__.py  acdc_edge_resolver.py  edge_registry.py  edge_resolver.py  pattern_space_resolver.py  reger_wrapper.py  verifier_wrapper.py
tests/: __init__.py  test_advanced_features.py  test_chain_verification.py  test_edge_resolver.py  test_export_graph.py  test_export_neo4j.py  test_export_property.py  test_export_rdf.py  test_export_viz.py  test_governance_compiler.py  test_governance_enforcement.py  test_governance_evolution.py  test_governance_execution.py  test_governance_integration.py  test_governance_patterns.py  test_governance_schema.py  test_governance_systems.py  test_governance_versioning.py  test_indexer.py  test_integration.py  test_parser.py  test_pattern_space_resolver.py  test_planner.py  test_temporal.py  test_trust_path.py  test_wrappers.py
