[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgql"
version = "0.1.0"
description = "KERI Graph Query Language - Declarative queries for KERI credential graphs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "WebOfTrust", email = "info@gleif.org" },
]
keywords = [
    "keri",
    "acdc",
    "credentials",
    "query",
    "graph",
    "decentralized",
    "identity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "keri>=1.2.0",
    "hio>=0.6.0",
    "lark>=1.1.0",
]

[project.optional-dependencies]
mcp = [
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "kgql[mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/Nicholas-Keystate/kgql"
Documentation = "https://github.com/Nicholas-Keystate/kgql#readme"
Repository = "https://github.com/Nicholas-Keystate/kgql"
Issues = "https://github.com/Nicholas-Keystate/kgql/issues"

[project.scripts]
kgql-mcp = "kgql.mcp:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kgql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
